--- a/projects/my_sweeping_bot/config/costmap_common_params.yaml
+++ b/projects/my_sweeping_bot/config/costmap_common_params.yaml
@@ -5,9 +5,9 @@ raytrace_range: 10.0
 
 transform_tolerance: 0.5
 
-robot_radius: 0.4
+robot_radius: 0.175
 inflation_radius: 0.2
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: hokuyo, data_type: LaserScan, topic: /udacity_bot/laser/scan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: hokuyo, data_type: LaserScan, topic: /my_sweeping_bot/laser/scan, marking: true, clearing: true}
